2012-05-29  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* backend/cimxml/property.c:
	[ 3528819 ] Crash in getInstance when instance has NULL properties
	(patch by Klaus Kampf)

2011-06-29  Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* cimc/cimcclient.c:
	[ 3344917 ] Beam, file leak

2011-06-29  Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* backend/cimxml/array.c, backend/cimxml/client.c,
	  backend/cimxml/instance.c, backend/cimxml/objectpath.c:
	[ 3344757 ] Beam, deref of potential Null pointers.

2011-06-29  Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* backend/cimxml/client.c, backend/cimxml/constClass.c,
		backend/cimxml/enumeration.c, backend/cimxml/instance.c,
		backend/cimxml/parserUtil.c, backend/cimxml/property.c, 
		backend/cimxml/qualifier.c, backend/cimxml/value.c:
	[ 3344403 ]  Beam, unitialized vars 

2011-05-27  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* backend/cimxml/grammar.c, backend/cimxml/cimXmlParser.h, 
	  backend/cimxml/cimXmlParser.c, backend/cimxml/instance.c,
	  backend/cimxml/objectpath.c, frontend/sfcc/native.h:
	[ 3286489 ] getInstance does not return key/value through XML
	(patch originated by Josef Moellers)

2011-04-25  Narasimha Sharoff  <nsharoff@us.ibm.com>

	* frontend/sfcc/sfcclient.c:
	[ 2967265 ] code cleanup in sfcclient
	(patch by Klaus Kaempf)

2011-04-07  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* backend/cimxml/grammar.c:
	[ 3196128 ] enumInstances does not set NameSpace in ObjectPath in XML mode
	(patch by Josef Moellers)

2011-04-05  Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* TEST/v2test_xq_synerr.c:
	[ 3213591 ] Local intf client abort abnormally on enum filter syntax err

2011-03-30  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* TEST/v2test_im.c:
	Added file

2011-03-30  Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* backend/cimxml/constClass.c, backend/cimxml/grammar.c
	[ 2847964 ] sfcc's getClass() fails to report class qualifiers