@@ -8,6 +8,7 @@ Bugs:
 - 3344757: Beam, deref of potential Null pointers.
 - 3344917: Beam, file leak
 - 3528819: Crash in getInstance when instance has NULL properties
+- 3530609: Various BEAM Errors
 
 Changes in 2.2.3
 ================
